feat: favorites add keywords and personal notes
fix save in db -> detail page
fix filter and sort

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,8 +36,8 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    border: 1px solid #e7e7e7;
-    background-color: #f3f3f3;
+    #border: 1px solid #e7e7e7;
+    #background-color: #f3f3f3;
 }
 
 li {
@@ -264,10 +264,6 @@ li a:hover:not(.active) {
 
         visibility: visible;
 
-    }
-
-    ul{
-        background-color: #aaa;
     }
 
     .topnav a {
@@ -607,3 +603,46 @@ searchForm {
         width: 100%;
     }
 }
+/* ****** Favorite edit page ****** */
+.edit-favorite-form{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 40px;
+    width: 100%;
+    max-width: 500px;
+}
+.edit-favorite-form .form-group {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 15px;
+    width: 100%;
+    max-width: 500px;
+}
+
+.edit-favorite-form label {
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+.edit-favorite-form input,
+.edit-favorite-form textarea {
+    #width: 100%;
+    max-width: 500px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.edit-favorite-form .actions {
+    display: flex;
+    justify-content: space-between;
+    max-width: 500px;
+    width: 100%;
+}
+
+.edit-favorite-form .actions .btn {
+    width: 45%;
+    text-align: center;
+}
+
