--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -17,13 +17,13 @@
 
           <div class="searchResponseIconsContainer">
             <div class="searchResponseIconsDiv">
-              <%= link_to course_detail_path(title: result["title"]), class: 'searchResponseIconsLink' do %>
+              <%= link_to course_detail_path(extract_parameters(result["detail_url"])), class: 'searchResponseIconsLink' do %>
                 <%= image_tag 'detail.png', class: "btn-img" %>
               <% end %>
             </div>
 
             <div class="searchResponseIconsDiv">
-              <%= form_with url: course_favorite_path, method: :post, local: true do |form| %>
+              <%= form_with url: course_favorite_path(extract_parameters(result["detail_url"])), method: :post, local: true do |form| %>
                 <%= form.hidden_field :type, value: 'Course' %>
                 <%= form.hidden_field :title, value: result["title"] %>
                 <%= form.hidden_field :short, value: result["short"] %>
