--- a/app/views/favorites/edit.html.erb
+++ b/app/views/favorites/edit.html.erb
@@ -1,17 +1,20 @@
 <h1>Edit Favorite</h1>
 
-<%= form_with model: @favorite, local: true do |form| %>
+<%= form_with model: @favorite, local: true, class: "edit-favorite-form" do |form| %>
+  <%= form.hidden_field :type, value: @favorite.favoritable_type %>
+
   <div class="form-group">
     <%= form.label :keywords %>
     <%= form.text_field :keywords, class: 'form-control' %>
   </div>
+
   <div class="form-group">
     <%= form.label :personal_notes %>
     <%= form.text_area :personal_notes, class: 'form-control' %>
   </div>
-  <div class="form-group">
-    <%= form.submit 'Update Favorite', class: 'btn btn-primary' %>
+
+  <div class="actions">
+    <%= link_to 'Cancel', favorites_path, class: 'btn btn-secondary' %>
+    <%= form.submit 'Save', class: 'btn btn-primary cancel-button-form' %>
   </div>
 <% end %>
-
-<%= link_to 'Back', favorites_path, class: 'btn btn-secondary' %>
