--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -12,6 +12,7 @@
         <option value="Thesis" <%= 'selected' if params[:type] == 'Thesis' %>>Thesis</option>
       </select>
     </div>
+    <%= hidden_field_tag :sort, params[:sort] %>
   <% end %>
 
   <%= form_with url: favorites_path, method: :get, local: true, class: "filter-form" do %>
@@ -22,6 +23,7 @@
         <option value="title" <%= 'selected' if params[:sort] == 'title' %>>Title A-Z</option>
       </select>
     </div>
+    <%= hidden_field_tag :type, params[:type] %>
   <% end %>
 </div>
 
@@ -31,6 +33,14 @@
       <span class="badge"><%= favorite.favoritable_type %></span>
       <h2><%= link_to favoritable_display_name(favorite.favoritable), favoritable_path(favorite.favoritable) %></h2>
       <p><%= favorite.created_at %></p>
+
+      <% if favorite.keywords.present? %>
+        <p><strong>Keywords:</strong> <%= favorite.keywords %></p>
+      <% end %>
+
+      <% if favorite.personal_notes.present? %>
+        <p><strong>Personal Notes:</strong> <%= favorite.personal_notes %></p>
+      <% end %>
 
       <div class="button-group">
         <%= form_with url: favorite_path(favorite), class:"remove-button-form", method: :delete, local: true do %>
