--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
     <%= image_tag 'rubyOnTiss-logo-png.png', class:'nav-img-logo', alt: 'Ruby on Tiss Logo' %>
       <% end %>
     <div id="myLinks">
-      <ul>
+      <ul class="ul-nav-elements">
         <li id="logo-desktop"><%= image_tag 'rubyOnTiss-logo-png.png', class:'nav-img-logo', alt: 'Ruby on Tiss Logo' %></li>
         <li><%= link_to 'Home', root_path %></li>
         <li><%= link_to 'Person', person_path %></li>
