--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -645,6 +645,25 @@ searchForm {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #4CAF50;
+    background-color: #007BFF;
     color: white;
+}
+
+.personSelectButton {
+    display: inline-block;
+    padding: 10px 20px;
+    margin: 10px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #007BFF;
+    border: none;
+    border-radius: 5px;
+    width: 80%;
+    text-align: center;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+}
+
+.personSelectButton:hover {
+    background-color: #0056b3;
 }
