--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -11,33 +11,32 @@
       <% @search_data_response["results"].each do |result| %>
         <li class="searchResultListItem">
           <div class="searchResponseInfoContainer">
-            <strong><%= result["title"] %></strong>
-            <p><%= result["short"] %></p>
+            <strong><%= result["title"].html_safe %></strong>
+            <p><%= result["short"].html_safe %></p>
           </div>
 
           <div class="searchResponseIconsContainer">
             <div class="searchResponseIconsDiv">
-              <%= link_to course_detail_path(extract_parameters(result["detail_url"])), class: 'searchResponseIconsLink' do %>
-                <%= image_tag 'detail.png', class: "btn-img" %>
-              <% end %>
+            <%= link_to course_detail_path(extract_parameters(result["detail_url"])), class: 'searchResponseIconsLink detail-button' do %>
+              <%= image_tag 'detail.png', class: "btn-img" %>
+               View Details
+            <% end %>
             </div>
-
             <div class="searchResponseIconsDiv">
-              <%= form_with url: course_favorite_path(extract_parameters(result["detail_url"])), method: :post, local: true do |form| %>
-                <%= form.hidden_field :type, value: 'Course' %>
-                <%= form.hidden_field :title, value: result["title"] %>
-                <%= form.hidden_field :short, value: result["short"] %>
-                <%= form.hidden_field :detail_url, value: result["detail_url"] %>
-                <%= form.submit do %>
+            <%= form_with url: course_favorite_path(extract_parameters(result["detail_url"])), method: :post, local: true, class: 'searchResponseIconsLink favorite-button' do |form| %>
+              <%= form.hidden_field :type, value: 'Course' %>
+              <%= form.hidden_field :title, value: result["title"] %>
+              <%= form.hidden_field :short, value: result["short"] %>
+              <%= form.hidden_field :detail_url, value: result["detail_url"] %>
+                <%= button_tag type: 'submit', class: 'favorite-button' do %>
                   <%= image_tag 'favorite.png', class: "btn-img" %>
+                  Add to Favorites
                 <% end %>
-              <% end %>
+            <% end %>
             </div>
           </div>
         </li>
       <% end %>
     </ul>
   </div>
-<% else %>
-  <p>No results found.</p>
 <% end %>
