--- a/app/views/courses/detail.html.erb
+++ b/app/views/courses/detail.html.erb
@@ -1,11 +1,11 @@
 <div class="card">
   <div class="card-body">
-    <h5 class="card-title"><%= @title %></h5>
-    <h6 class="card-subtitle mb-2 text-muted"><%= @course_type %></h6>
+    <h5 class="card-title"><%= @title.html_safe %></h5>
+    <h6 class="card-subtitle mb-2 text-muted"><%= @course_type.html_safe %></h6>
     <p class="card-text">
-      <strong>Course Number:</strong> <%= @course_nr %><br>
-      <strong>Semester:</strong> <%= @semester %><br>
-      <strong>Institution:</strong> <%= @institution %><br>
+      <strong>Course Number:</strong> <%= @course_nr.html_safe %><br>
+      <strong>Semester:</strong> <%= @semester.html_safe %><br>
+      <strong>Institution:</strong> <%= @institution.html_safe %><br>
       <strong>Teaching Content:</strong> <%= @teaching_content.html_safe %>
     </p>
     <%= link_to 'Go Back', :back, class: 'back-button' %>
