--- a/app/views/person/detail.html.erb
+++ b/app/views/person/detail.html.erb
@@ -1,14 +1,14 @@
 <div class="card">
   <div class="card-image">
     <% if @picture.present? %>
-      <%= image_tag @picture, class: 'card-img', alt: "Picture of #{@firstname} #{@lastname}" %>
+      <%= image_tag @picture, class: 'card-img', alt: "Picture of #{@firstname} #{@lastname}".html_safe %>
     <% else %>
-      <%= image_tag("person.png", class: 'card-img', alt: "Picture of #{@firstname} #{@lastname}") %>
+      <%= image_tag("person.png", class: 'card-img', alt: "Picture of #{@firstname} #{@lastname}".html_safe) %>
     <% end %>
   </div>
   <div class="card-content">
-    <p class="card-subtitle"><%= "#{@pre_title}" %></p>
-    <h2 class="card-title"><%= "#{@gender} #{@firstname} #{@lastname}" %></h2>
+    <p class="card-subtitle"><%= "#{@pre_title}".html_safe %></p>
+    <h2 class="card-title"><%= "#{@gender} #{@firstname} #{@lastname}".html_safe %></h2>
   </div>
   <%= link_to 'Full Report', full_report_path(@id), class: 'personSelectButton' %>
   <%= link_to 'Courses', person_courses_path(@id), class: 'personSelectButton' %>
