--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -697,3 +697,71 @@ li a:hover:not(.active) {
 .personSelectButton:hover {
     background-color: #0056b3;
 }
+
+
+.login-title {
+    text-align: center;
+    font-size: 2em;
+    color: #333;
+}
+
+.login-form {
+    width: 300px;
+    margin: 0 auto;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+.form-label {
+    font-weight: bold;
+    color: #555;
+}
+
+.form-input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+.submit-button {
+    background-color: #007BFF;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+.submit-button:hover {
+    background-color: #0056b3;
+}
+
+.register-prompt {
+    display: block;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.register-button {
+    display: block;
+    width: 200px;
+    margin: 10px auto;
+    background-color: #28a745;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+.register-button:hover {
+    background-color: #218838;
+}
+
+.register-link {
+    color: #fff;
+    text-decoration: none;
+}
